test/bad/18.zlus
(*
  There is a causality cycle. The value of x is needed to decide whether to reset
  the block in which x is itself defined.
 *)

let node main () = y where
  rec reset
        x = false
      and
        y = 2
      every x

